what's on 타이틀 작업 (tab)

--- a/index.html
+++ b/index.html
@@ -108,7 +108,47 @@
         <div id="container">
             <div class="section__group">
                 <section class="section__whats-on">
-                    <h2 class="section__title">What's on</h2>
+                    <div class="section__top">
+                        <div class="section__top-box">
+                            <h2 class="section__title">What's on</h2>
+                            <p>July 2020</p>
+                        </div>
+                        <div class="section__top-box">
+                            <ul class="lst-tab whats-on__calendar">
+                                <li class="lst-tab__item">
+                                    <a href="#" class="lst-tab__item-link">
+                                        <p class="whats-on__calendar-week week-holiday">Sun</p>
+                                        <p class="whats-on__calendar-date">12</p>
+                                    </a>
+                                </li>
+                                <li class="lst-tab__item today">
+                                    <a href="#" class="lst-tab__item-link">
+                                        <p class="whats-on__calendar-week">Mon</p>
+                                        <p class="whats-on__calendar-date date-off">13</p>
+                                    </a>
+                                </li>
+                                <li class="lst-tab__item">
+                                    <a href="#" class="lst-tab__item-link">
+                                        <p class="whats-on__calendar-week">Tue</p>
+                                        <p class="whats-on__calendar-date">14</p>
+                                    </a>
+                                </li>
+                                <li class="lst-tab__item">
+                                    <a href="#" class="lst-tab__item-link">
+                                        <p class="whats-on__calendar-week">Wed</p>
+                                        <p class="whats-on__calendar-date">14</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="section__top-box">
+                            <a href="#">
+                                <img src="images/common/ico-arr-title.png" alt="바로가기">
+                                <p>전체<br>보기</p>
+                            </a>
+                        </div>
+                    </div>
+
                 </section>
                 <section class="section__space-culture">
                     <h2 class="section__title">현대카드<br>Space ・ Culture</h2>
