main - space,culture 섹션 작업

--- a/index.html
+++ b/index.html
@@ -106,60 +106,156 @@
         </header>
         
         <div id="container">
-            <div class="section__group">
-                <section class="section__whats-on">
-                    <div class="section__top">
-                        <div class="section__top-box">
-                            <h2 class="section__title">What's on</h2>
-                            <p>July 2020</p>
+            <div class="inner-wrap">
+                <div class="section__group">
+                    <section class="section__whats-on">
+                        <div class="section__top">
+                            <div class="section__top-box">
+                                <h2 class="section__title">What's on</h2>
+                                <p>July 2020</p>
+                            </div>
+                            <div class="section__top-box">
+                                <ul class="lst-tab whats-on__calendar">
+                                    <li class="lst-tab__item today day-off">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Mon</p>
+                                            <p class="whats-on__calendar-date">13</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Tue</p>
+                                            <p class="whats-on__calendar-date">14</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Wed</p>
+                                            <p class="whats-on__calendar-date">15</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Thu</p>
+                                            <p class="whats-on__calendar-date">16</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Fri</p>
+                                            <p class="whats-on__calendar-date">17</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week">Sat</p>
+                                            <p class="whats-on__calendar-date">18</p>
+                                        </a>
+                                    </li>
+                                    <li class="lst-tab__item">
+                                        <a href="#" class="lst-tab__item-link">
+                                            <p class="whats-on__calendar-week week-holiday">Sun</p>
+                                            <p class="whats-on__calendar-date">18</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="section__top-box">
+                                <a href="#" class="btn-more">
+                                    <img src="images/common/ico-arr-title.png" alt="바로가기">
+                                    <p>전체<br>보기</p>
+                                </a>
+                            </div>
                         </div>
-                        <div class="section__top-box">
-                            <ul class="lst-tab whats-on__calendar">
-                                <li class="lst-tab__item">
-                                    <a href="#" class="lst-tab__item-link">
-                                        <p class="whats-on__calendar-week week-holiday">Sun</p>
-                                        <p class="whats-on__calendar-date">12</p>
-                                    </a>
-                                </li>
-                                <li class="lst-tab__item today">
-                                    <a href="#" class="lst-tab__item-link">
-                                        <p class="whats-on__calendar-week">Mon</p>
-                                        <p class="whats-on__calendar-date date-off">13</p>
-                                    </a>
-                                </li>
-                                <li class="lst-tab__item">
-                                    <a href="#" class="lst-tab__item-link">
-                                        <p class="whats-on__calendar-week">Tue</p>
-                                        <p class="whats-on__calendar-date">14</p>
-                                    </a>
-                                </li>
-                                <li class="lst-tab__item">
-                                    <a href="#" class="lst-tab__item-link">
-                                        <p class="whats-on__calendar-week">Wed</p>
-                                        <p class="whats-on__calendar-date">14</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="section__top-box">
-                            <a href="#">
-                                <img src="images/common/ico-arr-title.png" alt="바로가기">
-                                <p>전체<br>보기</p>
-                            </a>
-                        </div>
-                    </div>
+                        <div class="section__cnt">
 
+                        </div>
+                    </section>
+                    <section class="section__space-culture">
+                        <div class="section__top">
+                            <h2 class="section__title">현대카드<br>Space ・ Culture</h2>
+                        </div>
+                        <div class="section__cnt">
+                            <div class="section__cnt-box">
+                                <strong class="section__cnt-title">Space</strong>
+                                <ul class="lst-space">
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-dl.svg" alt="design library" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-dl-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-tl.svg" alt="Travel Library" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-tl-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-ml.svg" alt="Music Library" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-ml-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-cl.svg" alt="Cooking Library" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-cl-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-ud.svg" alt="Understage" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-ud-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-vp.svg" alt="Vinyl & Plastic" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-vp-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-st.svg" alt="Storage" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-st-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="section__cnt-box">
+                                <strong class="section__cnt-title">Culture</strong>
+                                <ul class="lst-space">
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-sc.svg" alt="Super Concert" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-sc-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-cp.svg" alt="Culture Project" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-cp-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                    <li class="lst-space__item">
+                                        <a href="#" class="lst-space__link">
+                                            <img src="images/common/logo-menu-dm.svg" alt="Davinci Motel" class="img__logo-dark">
+                                            <img src="images/common/logo-menu-dm-w.svg" alt="" class="img__logo-white">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <section class="section__post">
+                    <h2 class="section__title">Post</h2>
                 </section>
-                <section class="section__space-culture">
-                    <h2 class="section__title">현대카드<br>Space ・ Culture</h2>
+                <section class="section__notice">
+                    <h2 class="section__title">Notice</h2>
                 </section>
             </div>
-            <section class="section__post">
-                <h2 class="section__title">Post</h2>
-            </section>
-            <section class="section__notice">
-                <h2 class="section__title">Notice</h2>
-            </section>
         </div>
 
         <footer id="footer">
