--- a/index.html
+++ b/index.html
@@ -168,7 +168,44 @@
                             </div>
                         </div>
                         <div class="section__cnt">
-
+                            <div class="section__cnt-wrap">
+                                <a href="#" class="section__event ">
+                                    <div class="section__event-info">
+                                        <p class="section__event-period">07/15(수) ~ 10/11(일)</p>
+                                        <strong class="section__event-title">초현실적 환상<br>세계로의 초대</strong>
+                                        <p class="section__event-desc">오스제미오스 국내 최초 개인전 오픈!</p>
+                                        <p class="section__event-space">스토리지<span class="section__event-reservation">예약</span></p>
+                                    </div>
+                                    <div class="section__event-img">
+                                        <img src="images/main/event1.jpeg" alt="">
+                                        <span class="section__event-location">이태원</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__event ">
+                                    <div class="section__event-info">
+                                        <p class="section__event-period">07/08(수)</p>
+                                        <strong class="section__event-title">여름밤<br>스위스 여행</strong>
+                                        <p class="section__event-desc">스위스 전문 가이드 서찬수의 트래블 토크</p>
+                                        <p class="section__event-space">트래블 라이브러리<span class="section__event-reservation">예약</span></p>
+                                    </div>
+                                    <div class="section__event-img">
+                                        <img src="images/main/event2.jpg" alt="">
+                                        <span class="section__event-location">청담</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__event ">
+                                    <div class="section__event-info">
+                                        <p class="section__event-period">07/04(토)</p>
+                                        <strong class="section__event-title">시장 가는<br>즐거움</strong>
+                                        <p class="section__event-desc">쿠킹 라이브러리 X 마르쉐 파머스 마켓</p>
+                                        <p class="section__event-space">쿠킹 라이브러리</p>
+                                    </div>
+                                    <div class="section__event-img">
+                                        <img src="images/main/event3.jpg" alt="">
+                                        <span class="section__event-location">청담</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </section>
                     <section class="section__space-culture">
@@ -251,6 +288,9 @@
                 </div>
                 <section class="section__post">
                     <h2 class="section__title">Post</h2>
+                </section>
+                <section class="section__event">
+                    <h2 class="section__title">Event</h2>
                 </section>
                 <section class="section__notice">
                     <h2 class="section__title">Notice</h2>
