--- a/index.html
+++ b/index.html
@@ -169,40 +169,40 @@
                         </div>
                         <div class="section__cnt">
                             <div class="section__cnt-wrap">
-                                <a href="#" class="section__event ">
-                                    <div class="section__event-info">
-                                        <p class="section__event-period">07/15(수) ~ 10/11(일)</p>
-                                        <strong class="section__event-title">초현실적 환상<br>세계로의 초대</strong>
-                                        <p class="section__event-desc">오스제미오스 국내 최초 개인전 오픈!</p>
-                                        <p class="section__event-space">스토리지<span class="section__event-reservation">예약</span></p>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/15(수) ~ 10/11(일)</p>
+                                        <strong class="section__activity-title">초현실적 환상<br>세계로의 초대</strong>
+                                        <p class="section__activity-desc">오스제미오스 국내 최초 개인전 오픈!</p>
+                                        <p class="section__activity-space">스토리지<span class="section__activity-reservation">예약</span></p>
                                     </div>
-                                    <div class="section__event-img">
-                                        <img src="images/main/event1.jpeg" alt="">
-                                        <span class="section__event-location">이태원</span>
-                                    </div>
-                                </a>
-                                <a href="#" class="section__event ">
-                                    <div class="section__event-info">
-                                        <p class="section__event-period">07/08(수)</p>
-                                        <strong class="section__event-title">여름밤<br>스위스 여행</strong>
-                                        <p class="section__event-desc">스위스 전문 가이드 서찬수의 트래블 토크</p>
-                                        <p class="section__event-space">트래블 라이브러리<span class="section__event-reservation">예약</span></p>
-                                    </div>
-                                    <div class="section__event-img">
-                                        <img src="images/main/event2.jpg" alt="">
-                                        <span class="section__event-location">청담</span>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity1.jpg" alt="">
+                                        <span class="section__activity-location">이태원</span>
                                     </div>
                                 </a>
-                                <a href="#" class="section__event ">
-                                    <div class="section__event-info">
-                                        <p class="section__event-period">07/04(토)</p>
-                                        <strong class="section__event-title">시장 가는<br>즐거움</strong>
-                                        <p class="section__event-desc">쿠킹 라이브러리 X 마르쉐 파머스 마켓</p>
-                                        <p class="section__event-space">쿠킹 라이브러리</p>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/08(수)</p>
+                                        <strong class="section__activity-title">여름밤<br>스위스 여행</strong>
+                                        <p class="section__activity-desc">스위스 전문 가이드 서찬수의 트래블 토크</p>
+                                        <p class="section__activity-space">트래블 라이브러리<span class="section__activity-reservation">예약</span></p>
                                     </div>
-                                    <div class="section__event-img">
-                                        <img src="images/main/event3.jpg" alt="">
-                                        <span class="section__event-location">청담</span>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity2.jpg" alt="">
+                                        <span class="section__activity-location">청담</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/04(토)</p>
+                                        <strong class="section__activity-title">시장 가는<br>즐거움</strong>
+                                        <p class="section__activity-desc">쿠킹 라이브러리 X 마르쉐 파머스 마켓</p>
+                                        <p class="section__activity-space">쿠킹 라이브러리</p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity3.jpg" alt="">
+                                        <span class="section__activity-location">청담</span>
                                     </div>
                                 </a>
                             </div>
@@ -287,13 +287,81 @@
                     </section>
                 </div>
                 <section class="section__post">
-                    <h2 class="section__title">Post</h2>
+                    <div class="section__top">
+                        <h2 class="section__title">Post</h2>
+                        <a href="#" class="btn-more">
+                            <span>전체보기</span>
+                            <img src="images/common/ico-arr-title.png" alt="바로가기">
+                        </a>
+                    </div>
+                    <div class="section__cnt">
+                        <a href="#" class="section__cnt-box">
+                            <img src="images/main/post1.jpg" alt="">
+                            <span class="section__post-category">여행</span>
+                            <strong class="section__post-title">파도가 나를 부른다</strong>
+                            <p class="section__post-desc">프립 버스 타고 고성 서핑 여행</p>
+                        </a>
+                        <a href="#" class="section__cnt-box">
+                            <img src="images/main/post2.jpg" alt="">
+                            <span class="section__post-category">쿠킹•고메</span>
+                            <strong class="section__post-title">이모 여기 맛난걸로요!</strong>
+                            <p class="section__post-desc">술맛 나는 안주 맛집</p>
+                        </a>
+                        <a href="#" class="section__cnt-box">
+                            <img src="images/main/post3.jpg" alt="">
+                            <span class="section__post-category">음악</span>
+                            <strong class="section__post-title">1990년대 뉴트로 놀이</strong>
+                            <p class="section__post-desc">멜론 DJ멜군의 뉴트로 플레이리스트</p>
+                        </a>
+                        <a href="#" class="section__cnt-box">
+                            <img src="images/main/post4.jpg" alt="">
+                            <span class="section__post-category">디자인•아트</span>
+                            <strong class="section__post-title">트래쉬 버스터즈</strong>
+                            <p class="section__post-desc">전은경의 '요즘 괜찮은 디자인'</p>
+                        </a>
+                    </div>
                 </section>
                 <section class="section__event">
-                    <h2 class="section__title">Event</h2>
+                    <div class="section__top">
+                        <h2 class="section__title">Event</h2>
+                        <a href="#" class="btn-more">
+                            <span>전체보기</span>
+                            <img src="images/common/ico-arr-title.png" alt="바로가기">
+                        </a>
+                    </div>
+                    <div class="section__cnt">
+                        <a href="#" class="section__cnt-box">
+                            <strong class="section__event-title">DIVE 로고 내 취향 컬러는?</strong>
+                            <p class="section__event-desc">
+                                DIVER의 선택 #로고컬러
+                            </p>
+                        </a>
+                    </div>
                 </section>
                 <section class="section__notice">
-                    <h2 class="section__title">Notice</h2>
+                    <div class="section__top">
+                        <h2 class="section__title">Notice</h2>
+                        <a href="#" class="btn-more">
+                            <span>전체보기</span>
+                            <img src="images/common/ico-arr-title.png" alt="바로가기">
+                        </a>
+                    </div>
+                    <ul class="section__cnt">
+                        <li class="section__cnt-box">
+                            <a href="#">
+                                <strong class="section__notice-title">7월 23일 휴관 안내드립니다.</strong>
+                                <p class="section__notice-desc">2020. 07. 23 (목) 내부 행사 진행으로 현대카드 디자인 라이브러리 휴관 하오니 양해 부탁 드립니다. 현대카드의 다른 Space들은 모두 정상 운영됩니다.</p>
+                                <span class="section__notice-date">2020.07.13</span>
+                            </a>
+                        </li>
+                        <li class="section__cnt-box">
+                            <a href="#">
+                                <strong class="section__notice-title">코로나19로 인한 Space 단축 운영 안내 드립니다.</strong>
+                                <p class="section__notice-desc">코로나19 확산에 따라 현대카드 Space 운영시간이 단축 되오니 이용에 참고하여 주시기 바랍니다.<br>- 단축 운영 기간: 2020. 05. 30(토) ~ 2020. 06. 14(일)<br>- 단축 운영 시간: 화-일요일 12시 ~ 18시<br>- 대상 공간 : 현대카드 Space 전체 공간<br>(디자인/트래블/뮤직/쿠킹 라이브러리, Understage, Vinyl & Plastic, Storage)<br>각 Space별 프로그램 진행 여부는 홈페이지 또는 문의 전화를 통해 확인하여 주시기 바랍니다.</p>
+                                <span class="section__notice-date">2020.06.01</span>
+                            </a>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </div>
