--- a/index.html
+++ b/index.html
@@ -331,10 +331,14 @@
                     </div>
                     <div class="section__cnt">
                         <a href="#" class="section__cnt-box">
-                            <strong class="section__event-title">DIVE 로고 내 취향 컬러는?</strong>
                             <p class="section__event-desc">
-                                DIVER의 선택 #로고컬러
-                            </p>
+                                <strong class="section__event-title">듀스 한정판 LP 리마스터링 버전</strong>
+                                Limited Vinyl Club</p>
+                        </a>
+                        <a href="#" class="section__cnt-box">
+                            <p class="section__event-desc">
+                                <strong class="section__event-title">DIVE 로고 내 취향 컬러는?</strong>
+                                DIVER의 선택 #로고컬러</p>
                         </a>
                     </div>
                 </section>
@@ -350,7 +354,7 @@
                         <li class="section__cnt-box">
                             <a href="#">
                                 <strong class="section__notice-title">7월 23일 휴관 안내드립니다.</strong>
-                                <p class="section__notice-desc">2020. 07. 23 (목) 내부 행사 진행으로 현대카드 디자인 라이브러리 휴관 하오니 양해 부탁 드립니다. 현대카드의 다른 Space들은 모두 정상 운영됩니다.</p>
+                                <p class="section__notice-desc">2020. 07. 23 (목) 내부 행사 진행으로 현대카드 디자인 라이브러리 휴관 하오니 양해 부탁 드립니다. <br>현대카드의 다른 Space들은 모두 정상 운영됩니다.</p>
                                 <span class="section__notice-date">2020.07.13</span>
                             </a>
                         </li>
@@ -363,12 +367,34 @@
                         </li>
                     </ul>
                 </section>
+               
             </div>
+            <section class="section__download">
+                <img src="images/main/ico-dive-app.png" alt="DIVE App">
+                <p class="section__download-title">취향을 업데이트하는 힙스터들의 필수 앱</p>
+                <div class="section__download-market">
+                    <a href="#" class="section__download-ios">
+                        <span class="section__download-icon"></span>
+                        <span>App Store</span>
+                    </a>
+                    <a href="#" class="section__download-google">
+                        <span class="section__download-icon"></span>
+                        <span>Google Play</span>
+                    </a>
+                </div>
+            </section>
         </div>
-
+        
         <footer id="footer">
-
+            <img src="images/common/logo-hdcard.svg" alt="현대카드" class="footer__logo">
+            <div class="footer__info">
+                <address>서울특별시 영등포구 의사당대로3 현대캐피탈빌딩</address>
+                <p>대표이사 정태영</p>
+                <p>사업자등록번호 213-86-15419</p>
+            </div>
+            <p>© HYUNDAI CARD Corp.</p>
         </footer>
+
         <a href="#header" class="btn__top"><img src="images/common/btn-top.png" alt="상단으로 이동"></a>
     </div>
 </body>
