main 오류 수정, 컨텐츠 추가

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/642e975ea7.js" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>현대카드 DIVE</title>
 </head>
-<body>
+<body> 
     <div id="wrap">
         <header id="header">
             <div class="header__nav">
@@ -15,7 +15,7 @@
                 <nav id="gnb">
                     <ul class="lst-gnb">
                         <li class="lst-gnb__item">
-                            <a href="#" class="lst-gnb__item-link">
+                            <a href="culture.html" class="lst-gnb__item-link">
                                 <span class="lst-gnb__item-txt">What's on</span>
                             </a>
                         </li>
@@ -171,13 +171,61 @@
                             <div class="section__cnt-wrap">
                                 <a href="#" class="section__activity ">
                                     <div class="section__activity-info">
+                                        <p class="section__activity-period">07/24(금)</p>
+                                        <strong class="section__activity-title">낯선 곳에<br>나를 잠시<br>묶어둔 여름</strong>
+                                        <p class="section__activity-desc">여름밤, 이병률 작가의 시 낭독회</p>
+                                        <p class="section__activity-space">트래블 라이브러리<span class="section__activity-reservation">예매</span></p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity9.jpg" alt="">
+                                        <span class="section__activity-location">청담</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/16(목)</p>
+                                        <strong class="section__activity-title">위스키 끝파왕,<br>버번을 만나다</strong>
+                                        <p class="section__activity-desc">버번 위스키 테이스팅 클래스</p>
+                                        <p class="section__activity-space">쿠킹 라이브러리<span class="section__activity-reservation">예약</span></p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity8.jpg" alt="">
+                                        <span class="section__activity-location">청담</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/15(수) ~ 07/21(화)</p>
+                                        <strong class="section__activity-title">듀스 한정판 LP<br>리마스터링 버전</strong>
+                                        <p class="section__activity-desc">Limited Vinyl Club</p>
+                                        <p class="section__activity-space">바이닐앤플라스틱<span class="section__activity-reservation">예약</span></p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity7.jpg" alt="">
+                                        <span class="section__activity-location">이태원</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">07/15(수) ~ 10/11(일)</p>
+                                        <strong class="section__activity-title">Lucky DIVE<br>오스제미오스 인증샷!</strong>
+                                        <p class="section__activity-desc">전시 인증샷 보여주고 선물 뽑자!</p>
+                                        <p class="section__activity-space">스토리지</p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity6.jpg" alt="">
+                                        <span class="section__activity-location">이태원</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity ">
+                                    <div class="section__activity-info">
                                         <p class="section__activity-period">07/15(수) ~ 10/11(일)</p>
                                         <strong class="section__activity-title">초현실적 환상<br>세계로의 초대</strong>
                                         <p class="section__activity-desc">오스제미오스 국내 최초 개인전 오픈!</p>
                                         <p class="section__activity-space">스토리지<span class="section__activity-reservation">예약</span></p>
                                     </div>
                                     <div class="section__activity-img">
-                                        <img src="images/main/activity1.jpg" alt="">
+                                        <img src="images/main/activity5.jpg" alt="">
                                         <span class="section__activity-location">이태원</span>
                                     </div>
                                 </a>
@@ -189,7 +237,7 @@
                                         <p class="section__activity-space">트래블 라이브러리<span class="section__activity-reservation">예약</span></p>
                                     </div>
                                     <div class="section__activity-img">
-                                        <img src="images/main/activity2.jpg" alt="">
+                                        <img src="images/main/activity4.jpg" alt="">
                                         <span class="section__activity-location">청담</span>
                                     </div>
                                 </a>
@@ -202,6 +250,18 @@
                                     </div>
                                     <div class="section__activity-img">
                                         <img src="images/main/activity3.jpg" alt="">
+                                        <span class="section__activity-location">청담</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="section__activity">
+                                    <div class="section__activity-info">
+                                        <p class="section__activity-period">06/25(목)</p>
+                                        <strong class="section__activity-title">글자에 시나리오를<br>담는<br>방법</strong>
+                                        <p class="section__activity-desc">디자인 라이브러리 Talk 28. 프로파간다</p>
+                                        <p class="section__activity-space">디자인 라이브러리<span class="section__activity-reservation">예약</span></p>
+                                    </div>
+                                    <div class="section__activity-img">
+                                        <img src="images/main/activity2.jpg" alt="">
                                         <span class="section__activity-location">청담</span>
                                     </div>
                                 </a>
@@ -392,7 +452,7 @@
                 <p>대표이사 정태영</p>
                 <p>사업자등록번호 213-86-15419</p>
             </div>
-            <p>© HYUNDAI CARD Corp.</p>
+            <p>&copy; HYUNDAI CARD Corp.</p>
         </footer>
 
         <a href="#header" class="btn__top"><img src="images/common/btn-top.png" alt="상단으로 이동"></a>
