whats'on 페이지 section__top 작업

--- a/culture.html
+++ b/culture.html
@@ -113,11 +113,31 @@
                         <h2 class="section__title">What's on</h2>
                         <p>현대카드 컬처소식을 가장 빠르게 DIVE</p>
                     </div>
-                    <div class="section__top-box"></div>
+                    <div class="section__top-box">
+                        <ul class="lst-tab culture__sort">
+                            <li class="lst-tab__item culture__sort-calendar on">
+                                <a href="#" class="lst-tab__item-link">
+                                    <i class="far fa-calendar"></i>
+                                    <i class="fas fa-calendar"></i>
+                                    <span class="lst-tab__item-txt">캘린더</span>
+                                </a>
+                            </li>
+                            <li class="lst-tab__item culture__sort-places">
+                                <a href="#" class="lst-tab__item-link">
+                                    <i class="far fa-map"></i>
+                                    <i class="fas fa-map"></i>
+                                    <span class="lst-tab__item-txt">지역</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
                 <section class="section__cnt">
-                    <article class=""></article>
-                    <article class=""></article>
+                    <div class="section__cnt-wrap lst-tab__cnt">
+                        <article class=""></article>
+                        <article class=""></article>
+                    </div>
+                    <div class="section__cnt-wrap lst-tab__cnt"></div>
                 </section>
             </div>
 
